# cpp-miltech

./: .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: main.cpp.9CD28F3AF588078A.idx  main.cpp.C0568911550A7436.idx  telemetry.cpp.7E221A742CCBA4F7.idx  telemetry.hpp.C9996789A703B4D2.idx
.devcontainer/: .clang-tidy
homework_04/src/: main.cpp
homework_05/: CMakeLists.txt
homework_05/include/: telemetry.hpp
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/include/: ballistics.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_06/tests/data/: bad.txt
homework_07/: CMakeLists.txt
homework_07/src/: main.cpp
homework_08/: CMakeLists.txt
homework_08/include/config/: ConfigLoader.h  ConfigLoaderJSON.h
homework_08/include/core/: ConfigLoader.h  MissionProcessor.h  TargetProvider.h  umacro.h
homework_08/include/dto/: AmmoParams.h  DroneParams.h
homework_08/include/interfaces/: IBallisticSolver.h  ITargetProvider.h
homework_08/include/providers/: TargetProvider.h  TargetProviderJSON.h
homework_08/include/solvers/: AnalyticalSolver.h  TableSolver.h
homework_08/src/: AnalyticalSolver.cpp  ConfigLoaderJSON.cpp  MissionProcessor.cpp  TableSolver.cpp  main.cpp
homework_08/src/config/: ConfigLoaderJSON.cpp
homework_08/src/solvers/: TableSolver.cpp
homework_09/include/config/: ConfigLoaderTest.h
homework_09/include/core/: MissionProcessor.h
homework_09/include/dto/: Coord.h
homework_09/include/interfaces/: IConfigLoader.h
homework_09/include/providers/: TargetProvider.h  TargetProviderTest.h
homework_09/src/: main.cpp
homework_09/src/solvers/: AnalyticalSolver.cpp
